--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 			
 			<h4 style="color: #696969; text-align: center;">Find Accessories</h4>
 			<div style="text-align: center;">
-				<button class="button">Book Professionals </button>	
+				<button class="button">Find On Rent</button>	
 			</div>
 		</article>
 		<article class="article">
@@ -85,7 +85,7 @@
 			</div>
 			<h4 style="color: #696969; text-align: center;">Buy</h4>
 			<div style="text-align: center;">
-				<button class="button">Book Professionals </button>	
+				<button class="button">Buy Itmes</button>	
 			</div>
 		</article>
 	</section>
