--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 			<h3>Buy Items</h3>
 			<div class="sub-article">
 				<div class="sub-child1">
-					<p>Shop Cameras Online - Explore huge range of branded Cameras online get upto 20% discount, view our product list and pick the best Cameras for you. Enjoy Free Shipping & COD across India. EMI options available with Easy Return/Replacement Polices.<br> This platform provides you the best price by comparing prices across most of online shoping platform.<br>For any queries contact us.</p>	
+					<p>Shop Cameras Online - Explore huge range of branded Cameras online get upto 20% discount, view our product list and pick the best Cameras for you. Enjoy Free Shipping & COD across India. EMI options available with Easy Return/Replacement Polices.<br> This platform provides you the best price by comparing prices across most of online shoping platform.</p>	
 				</div>
 				<div class="sub-child2">
 					<img src="image/buy.jpg" id="buy" />	
