--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
+	<meta charset="utf-8" lang="en">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="Description" content="One stop for hire photographer, buy camera and its accessories and rent accessories">
 	<meta name="keywords" content="Photographer, Photography, Hire Photographer, camera on rent, buy camera, buy camrera accessories, photographer for wedding">
@@ -18,9 +18,9 @@
 		<header >
 			<nav class="container-1">
 				<div class="header-left">
-					<img src="image/logo1.png"/>
+					<img src="image/logo1.png" alt="company logo" />
 				</div>
-				<ul class="header-right" role="navigation">
+				<ul class="header-right">
 					<li><a href="#">Home</a></li>
 					<li><a href="#">About Us</a></li>
 					<li><a href="#">Blog</a></li>
@@ -47,7 +47,7 @@
 					</p>
 				</div>
 				<div class="sub-child2">
-					<img src="image/hire.jpg" id="hire" />
+					<img src="image/hire.jpg" id="hire" alt="hire photographer" />
 				</div>
 			</div>			
 			<h4 style="color: #696969; text-align: center;">Book a Professional</h4>
@@ -63,7 +63,7 @@
 					<p>It is a medium format digital camera rental service that comes along with an experienced operator to manage the digital workflow during the shoot, so you, as the Photographer, can get on with getting the shot. We provide you with the latest Hasselblad H series body with Phaseone IQ series digital backs and many range of supporting lenses, camera – lighting supporting accessories. For any other requirements contact us.</p>	
 				</div>
 				<div class="sub-child2">
-					<img src="image/rent.jpg" id="rent" />	
+					<img src="image/rent.jpg" id="rent" alt="Items on rent" />	
 				</div>
 				
 			</div>
@@ -80,7 +80,7 @@
 					<p>Shop Cameras Online - Explore huge range of branded Cameras online get upto 20% discount, view our product list and pick the best Cameras for you. Enjoy Free Shipping & COD across India. EMI options available with Easy Return/Replacement Polices.<br> This platform provides you the best price by comparing prices across most of online shoping platform.</p>	
 				</div>
 				<div class="sub-child2">
-					<img src="image/buy.jpg" id="buy" />	
+					<img src="image/buy.jpg" id="buy" alt="buy items" />	
 				</div>
 			</div>
 			<h4 style="color: #696969; text-align: center;">Buy</h4>
@@ -127,7 +127,7 @@
 			<a href="#" id="linkedin">
 				<i class="fab fa-linkedin-in fa-lg" style="height: 40px;width: 40px"></i>
 			</a>
-			<p>Copyright &copy 2018</p>
+			<p>Copyright &copy; 2018</p>
 		</div>
 	</footer>
 </body>
