--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<meta charset="utf-8" lang="en">
+	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="Description" content="One stop for hire photographer, buy camera and its accessories and rent accessories">
 	<meta name="keywords" content="Photographer, Photography, Hire Photographer, camera on rent, buy camera, buy camrera accessories, photographer for wedding">
