--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
 	<meta name="Description" content="One stop for hire photographer, buy camera and its accessories and rent accessories">
 	<meta name="keywords" content="Photographer, Photography, Hire Photographer, camera on rent, buy camera, buy camrera accessories, photographer for wedding">
 	<title>One Stop Shop for all photography needs</title>
-	<link rel="stylesheet" href="css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet"> 
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+	<link rel="stylesheet" href="css/style.css">
+	<link rel="icon" href="image/logo1-small.png">
 </head>
 <body>
 
@@ -18,7 +19,9 @@
 		<header >
 			<nav class="container-1">
 				<div class="header-left">
-					<img src="image/logo1.png" alt="company logo" />
+					<a href="index.html">
+						<img src="image/logo1.png" alt="company logo" />
+					</a>
 				</div>
 				<ul class="header-right">
 					<li><a href="#">Home</a></li>
