--- a/index.html
+++ b/index.html
@@ -1,137 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="Description" content="One stop for hire photographer, buy camera and its accessories and rent accessories">
-	<meta name="keywords" content="Photographer, Photography, Hire Photographer, camera on rent, buy camera, buy camrera accessories, photographer for wedding">
-	<title>One Stop Shop for all photography needs</title>
-	<link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet"> 
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
-	<link rel="stylesheet" href="css/style.css">
-	<link rel="icon" href="image/logo1-small.png">
-</head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="Description" content="One stop for hire photographer, buy camera and its accessories and rent accessories">
+  <meta name="keywords" content="Photographer, Photography, Hire Photographer, camera on rent, buy camera, buy camrera accessories, photographer for wedding">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>One Stop Shop for all photography needs</title>
+  
+  
+<script type="text/javascript" src="bundle.js"></script></head>
 <body>
-
-	<!--  		hero image			-->
-	<div class="hero-image">
-		<!-- 	header section 		-->
-		<header >
-			<nav class="container-1">
-				<div class="header-left">
-					<a href="index.html">
-						<img src="image/logo1.png" alt="company logo" />
-					</a>
-				</div>
-				<ul class="header-right">
-					<li><a href="#">Home</a></li>
-					<li><a href="#">About Us</a></li>
-					<li><a href="#">Blog</a></li>
-					<li><a href="#">Contact Us</a></li>
-					<li><a href="#">Register</a></li>
-				</ul>
-			</nav>	
-		</header>
-		<div class="hero-text">
-			<h1 style="font-size:4vw">"Hire Photographer | Accessories on Rent | Buy Items"</h1>
-   			<p>One Shop for all your photography gears.</p>
-		</div>
-	</div>
-	<!-- content 		-->
-
-	<section class="details-container">
-		<article class="article">
-			<h3>Hire Photographer</h3>
-			<div class="sub-article">
-				<div class="sub-child1">
-					<p> A photographer is more than just someone to snap a few pictures at your next event. Your photographer 	  is responsible for creating memories that you will cherish for years!
-
-					Credible photographers are studied professionals who will embody the feel of your event through their work. Whether you're celebrating your wedding, throwing a party, or hosting a corporate event, a talented photographer is one of the best investments in making your event unforgettable!
-					</p>
-				</div>
-				<div class="sub-child2">
-					<img src="image/hire.jpg" id="hire" alt="hire photographer" />
-				</div>
-			</div>			
-			<h4 style="color: #696969; text-align: center;">Book a Professional</h4>
-			<div style="text-align: center;">
-				<button class="button">Book Professionals </button>	
-			</div>
-			
-		</article>		
-		<article  class="article">
-			<h3>Accessories on Rent</h3>
-			<div class="sub-article">
-				<div class="sub-child1">
-					<p>It is a medium format digital camera rental service that comes along with an experienced operator to manage the digital workflow during the shoot, so you, as the Photographer, can get on with getting the shot. We provide you with the latest Hasselblad H series body with Phaseone IQ series digital backs and many range of supporting lenses, camera – lighting supporting accessories. For any other requirements contact us.</p>	
-				</div>
-				<div class="sub-child2">
-					<img src="image/rent.jpg" id="rent" alt="Items on rent" />	
-				</div>
-				
-			</div>
-			
-			<h4 style="color: #696969; text-align: center;">Find Accessories</h4>
-			<div style="text-align: center;">
-				<button class="button">Find On Rent</button>	
-			</div>
-		</article>
-		<article class="article">
-			<h3>Buy Items</h3>
-			<div class="sub-article">
-				<div class="sub-child1">
-					<p>Shop Cameras Online - Explore huge range of branded Cameras online get upto 20% discount, view our product list and pick the best Cameras for you. Enjoy Free Shipping & COD across India. EMI options available with Easy Return/Replacement Polices.<br> This platform provides you the best price by comparing prices across most of online shoping platform.</p>	
-				</div>
-				<div class="sub-child2">
-					<img src="image/buy.jpg" id="buy" alt="buy items" />	
-				</div>
-			</div>
-			<h4 style="color: #696969; text-align: center;">Buy</h4>
-			<div style="text-align: center;">
-				<button class="button">Buy Itmes</button>	
-			</div>
-		</article>
-	</section>
-	
-	<section class="second-container">
-		<h3>Are you a photographer looking to book more events?</h3>
-		<p>Partner with Us.</p>
-			<div style="text-align: center;">
-				<button class="button">Register </button>	
-			</div>
-	</section>
-
-	<!-- 		footer 			-->
-	<footer class="footer">
-		<div class="footer-box1">
-			<a href="#"><p>Blog</p></a>
-			<a href="#"><p>Press</p></a>
-			<a href="#"><p>Gallery</p></a>
-			<a href="#"><p>Careers</p></a>
-			<a href="#"><p>Terms and Condition</p></a>
-		</div>
-		<div class="footer-box2">
-			<h3>Reach Us</h3>
-			<h4>Address:</h4>
-			<p>95  Prabhat Centre, Sector , Turbhe, <br>Mumbai, Maharashtra<br>Zip Code: 400613</p>
-			<p>Contact No: +91 7500704995, 02227575378</p>
-		</div>
-		<div class="footer-box3">
-			<h3>Social  Links</h3>
-			<a href="#" id="facebook">
-				<i class="fab fa-facebook-f  fa-lg" style="height: 40px;width: 40px"></i>
-			</a>
-			<a href="#" id="twitter">
-				<i class="fab fa-twitter fa-lg" style="height: 40px;width: 40px"></i>
-			</a>
-			<a href="#" id="instagram">
-				<i class="fab fa-instagram fa-lg" style=" height: 40px;width: 40px"></i>
-			</a>
-			<a href="#" id="linkedin">
-				<i class="fab fa-linkedin-in fa-lg" style="height: 40px;width: 40px"></i>
-			</a>
-			<p>Copyright &copy; 2018</p>
-		</div>
-	</footer>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Dropdown
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Something else here</a>
+          </div>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#">Disabled</a>
+        </li>
+      </ul>
+      <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      </form>
+    </div>
+  </nav>
+  <div class="jumbotron">
+    <h1 class="display-4">Hello, world!</h1>
+    <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+    <hr class="my-4">
+    <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+    <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+  </div>
 </body>
 </html>
