--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   
 <script type="text/javascript" src="bundle.js"></script></head>
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
+  <!--      header      -->
   <header>
+    <!--        navigation bar      -->
     <nav class="navbar navbar-expand-md navbar-light fixed-top" id="mainNav">
       
       <button class="navbar-toggler navbar-toggler-left" type="button"  data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -20,7 +22,6 @@
       <a class="navbar-brand" href="#">
         <img src="/image/logo1.png">
       </a>
-      <!--  js scroll trigger not included    -->
       <div class="collapse  navbar-collapse" id="navbarContent">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
@@ -53,7 +54,7 @@
         </ul>
       </div>
     </nav>  
-
+    <!--        Carousel Component        -->
     <div class="carousel slide" data-ride="carousel" id="slider">
       <ol class="carousel-indicators">
         <li data-target="#slider" data-slide-to="0" class="active"></li>
@@ -102,7 +103,7 @@
       </a>
     </div>
   </header>
-
+  <!--          section 1 services        -->
   <section  class="row mr-0 ml-0 content mt-4 "  id="section1">
     <div class="col-12 col-sm-6 col-md-4  mt-4  pr-1 pl-2">
       <div class="card">
@@ -114,7 +115,7 @@
           </p>
           <div class="button-group">
             <button type="button" class="btn btn-sm btn-secondary">Hire Professionals</button>
-            <small class="text-muted ml-auto" data-toggle="popover" title="Hire Professionals" data-content=" A photographer is more than just someone to snap a few pictures at your next event. Your photographer is responsible for creating memories that you will cherish for years! Credible photographers are studied professionals who will embody the feel of your event through their work. Whether you're celebrating your wedding, throwing a party, or hosting a corporate event, a talented photographer is one of the best investments in making your event unforgettable!">know more..</small>
+            <small class="text-muted ml-auto" style="cursor: pointer;" data-toggle="popover" data-trigger="hover" title="Hire Professionals" data-content=" A photographer is more than just someone to snap a few pictures at your next event. Your photographer is responsible for creating memories that you will cherish for years! Credible photographers are studied professionals who will embody the feel of your event through their work. Whether you're celebrating your wedding, throwing a party, or hosting a corporate event, a talented photographer is one of the best investments in making your event unforgettable!">know more..</small>
             
           </div>
         </div>
@@ -130,7 +131,7 @@
           </p>
           <div class="button-group">
             <button type="button" class="btn btn-sm btn-secondary">Find On Rent</button>
-            <small class="text-muted ml-auto" data-toggle="popover" title="Items On Rent" data-content="It is a medium format digital camera rental service that comes along with an experienced operator to manage the digital workflow during the shoot, so you, as the Photographer, can get on with getting the shot. We provide you with the latest Hasselblad H series body with Phaseone IQ series digital backs and many range of supporting lenses, camera – lighting supporting accessories. For any other requirements contact us.">know more..</small>
+            <small class="text-muted ml-auto" data-toggle="popover" style="cursor: pointer;" data-trigger="hover" title="Items On Rent" data-content="It is a medium format digital camera rental service that comes along with an experienced operator to manage the digital workflow during the shoot, so you, as the Photographer, can get on with getting the shot. We provide you with the latest Hasselblad H series body with Phaseone IQ series digital backs and many range of supporting lenses, camera – lighting supporting accessories. For any other requirements contact us.">know more..</small>
           </div>
         </div>
       </div>
@@ -145,12 +146,14 @@
           </p>
           <div class="button-group">
             <button type="button" class="btn btn-sm btn-secondary">Buy Items</button>
-            <small class="text-muted ml-auto" data-toggle="popover" title="Buy Items" data-content=" Shop Cameras Online - Explore huge range of branded Cameras online get upto 20% discount, view our product list and pick the best Cameras for you. Enjoy Free Shipping & COD across India. EMI options available with Easy Return/Replacement Polices.<br> This platform provides you the best price by comparing prices across most of online shoping platform.">know more..</small>
+            <small class="text-muted ml-auto" data-toggle="popover" style="cursor: pointer;" data-trigger="hover" title="Buy Items" data-content=" Shop Cameras Online - Explore huge range of branded Cameras online get upto 20% discount, view our product list and pick the best Cameras for you. Enjoy Free Shipping & COD across India. EMI options available with Easy Return/Replacement Polices.<br> This platform provides you the best price by comparing prices across most of online shoping platform.">know more..</small>
           </div>
         </div>
       </div>
     </div>
   </section>
+
+  <!--          section2  register      -->
   <section class="jumbotron jumbotron-fluid mt-3 mb-1 sec-2" id="section2">
     <div class="container">
       <h4 >Are you a photographer looking to book more events?</h4>
@@ -158,6 +161,8 @@
       <button class="btn btn-secondary btn-md mt-4" type="button">Register</button>
     </div>
   </section>
+
+  <!--          section3      -->
   <section class="jumbotron jumbotron-fluid sec-3 mb-0" id="section3">
     <div class="container">
       <form>
@@ -181,6 +186,7 @@
     </div>
   </section>
 
+  <!--        footer    -->
   <footer class="container-fluid" id="section4">
     <div class="row footer">
       <div class="col-12 col-sm-4  box-1">
