--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <a class="navbar-brand" href="#">
-        <img src="/image/logo1.png">
+        <img src="/image/logo1.png" alt="companyLogo">
       </a>
       <div class="collapse  navbar-collapse" id="navbarContent">
         <ul class="navbar-nav ml-auto">
@@ -171,13 +171,13 @@
           <div class="form-group row mt-3" style="text-align: left;">
             <label for="staticEmail"  class="col-12 col-sm-2">Email:</label>
             <div class="col-12 col-sm-10">
-              <input type="email" class="form-control form-control-sm " placeholder="name@example.com">  
+              <input id="staticEmail" type="email" class="form-control form-control-sm " placeholder="name@example.com">  
             </div>
           </div>
           <div class="form-group row" style="text-align: left;">
             <label for="yourQuery" class="col-12 col-sm-2">Query:</label>
             <div class="col-12 col-sm-10 ">
-              <textarea type="text" class="form-control" placeholder="Write your query."rows="3"></textarea>  
+              <textarea id="yourQuery" class="form-control" placeholder="Write your query." rows="3"></textarea>  
             </div>
           </div>
           <button class="btn btn-secondary btn-md">Submit</button>
@@ -198,7 +198,7 @@
       </div>
       <div class="col-12 col-sm-4 box-2">
         <h5>Reach Us</h5>
-        <h7>Address:</h7>
+        <h6>Address:</h6>
         <p>95  Prabhat Centre, Sector , Turbhe, <br>Mumbai, Maharashtra<br>Zip Code: 400613</p>
         <p>Contact No: +91 7500704995, 02227575378</p>
       </div>
@@ -220,8 +220,6 @@
       </div>
     </div>
   </footer>
-  <script type="text/javascript">
-    
-  </script>
+  
 </body>
 </html>
